# BETTI

./: .gitignore  README.md  pyproject.toml
core/complexity/: betti_complexity.py
core/coordinator/: server_tibet_handler.py
core/security/: balans.py  fail2flag.py  hicss.py  snaft.py
demos/: betti.html  humotica.html  tibet-demo.html
docs/: BETTI-BALANS-README.md  BETTI-EULER-IDENTITY.md  BETTI-FOURIER-ROUTING.md  BETTI-HUMOTICA.md  BETTI-INTEGRATION.md  BETTI-LOGARITHMIC-DECISIONING.md  BETTI-MAXWELL-MONITORING.md  BETTI-SCHRODINGER-SUPERPOSITION.md  BETTI-TCP-HANDSHAKE.md  BETTI-THERMODYNAMICS.md
examples/: demo_shoot_tibet.py
gfx/: README.md  __init__.py  betti_budget.py  i_balance.py  lazy_loader.py  snaft_gpu.py  tibet_gpu.py
humotica/: HUMOTICA.md
papers/: BETTI-PAPER-v2.0.md  TBET-BETTI-ARCHITECTURE.md  TBET-BETTI-DEPARTMENTAL-LEVELS.md  TBET-LOOP-PREVENTION.md  TIBET-BETTI-NAMING.md  TRUST-TOKENS-REVOLUTION.md  VISION-UNIVERSAL-BETTI.md
sdk/python/tibet_betti_client/: client.py
sdk/python/tibet_betti_client/examples/: balans_complete_demo.py
src/betti/: __init__.py
